force-app/main/default/objects/AppError__c/AppError__c.object-meta.xml
<CustomObject>
    <label>App Error</label>
    <nameField>
        <displayFormat>CER-{0000}</displayFormat>
        <label>App Error #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>App Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>