force-app/main/default/objects/AppError__c/fields/dtm_RecordedDate__c.field-meta.xml
<CustomField>
    <fullName>dtm_RecordedDate__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Recorded Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>