force-app/main/default/objects/AppError__c/fields/ftxt_ForwardViaEmail__c.field-meta.xml
<CustomField>
    <fullName>ftxt_ForwardViaEmail__c</fullName>
    <formula>HYPERLINK(&#39;mailto:support@logicline.de?subject=Hello+There&amp;body=This+is+an+example&#39;,&#39;Email Me&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forward via email...</label>
    <type>Text</type>
</CustomField>