force-app/main/default/objects/AppError__c/fields/lkp_Account__c.field-meta.xml
<CustomField>
    <fullName>lkp_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>App Errors</relationshipLabel>
    <relationshipName>ErrorEmails</relationshipName>
    <type>Lookup</type>
</CustomField>