force-app/main/default/objects/AppError__c/fields/lkp_License__c.field-meta.xml
<CustomField>
    <fullName>lkp_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>License</label>
    <referenceTo>sfLma__License__c</referenceTo>
    <relationshipLabel>App Errors</relationshipLabel>
    <relationshipName>CustomerErrors</relationshipName>
    <type>Lookup</type>
</CustomField>