force-app/main/default/objects/AppError__c/fields/lkp_Package__c.field-meta.xml
<CustomField>
    <fullName>lkp_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Package</label>
    <referenceTo>sfLma__Package__c</referenceTo>
    <relationshipLabel>App Errors</relationshipLabel>
    <relationshipName>CustomerErrors</relationshipName>
    <type>Lookup</type>
</CustomField>