force-app/main/default/objects/AppError__c/fields/lkp_PackageVersion__c.field-meta.xml
<CustomField>
    <fullName>lkp_PackageVersion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Package Version</label>
    <referenceTo>sfLma__Package_Version__c</referenceTo>
    <relationshipLabel>App Errors</relationshipLabel>
    <relationshipName>CustomerErrors</relationshipName>
    <type>Lookup</type>
</CustomField>