force-app/main/default/objects/AppError__c/fields/txl_FullMailBody__c.field-meta.xml
<CustomField>
    <fullName>txl_FullMailBody__c</fullName>
    <label>Full Mail Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>