force-app/main/default/objects/AppError__c/fields/txl_Hints__c.field-meta.xml
<CustomField>
    <fullName>txl_Hints__c</fullName>
    <label>Hints (powered by OpenAI)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>