force-app/main/default/objects/AppError__c/fields/txl_Insights__c.field-meta.xml
<CustomField>
    <fullName>txl_Insights__c</fullName>
    <label>Insights (powered by OpenAI)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>