force-app/main/default/objects/AppError__c/fields/txl_Stacktrace__c.field-meta.xml
<CustomField>
    <fullName>txl_Stacktrace__c</fullName>
    <label>Stacktrace</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>