force-app/main/default/objects/AppError__c/fields/txt_Location__c.field-meta.xml
<CustomField>
    <fullName>txt_Location__c</fullName>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>