force-app/main/default/objects/AppError__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>txt_ExceptionType__c</columns>
    <columns>lkp_Package__c</columns>
    <columns>lkp_PackageVersion__c</columns>
    <columns>lkp_Account__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>lkp_License__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Inbox</label>
</ListView>