force-app/main/default/objects/AppError__c/listViews/NotAssignable.listView-meta.xml
<ListView>
    <fullName>NotAssignable</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>lkp_Package__c</columns>
    <columns>lkp_PackageVersion__c</columns>
    <columns>lkp_Account__c</columns>
    <columns>txt_UserId__c</columns>
    <columns>txt_ExceptionType__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>txt_OrgId__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>txt_Namespace__c</field>
        <operation>equals</operation>
    </filters>
    <label>Not assignable</label>
</ListView>